Внес правки в работу с ролями
