# auth-service/docs/swagger.yaml
@@ -245,6 +245,12 @@ paths:
         name: user_id
         required: true
         type: string
+      - description: Role
+        in: body
+        name: user_role
+        required: true
+        schema:
+          type: integer
       responses:
         "200":
           description: OK
